knit .Rmds to Word

--- a/analysis/markdown/habitat_use_availability.html
+++ b/analysis/markdown/habitat_use_availability.html
@@ -266,7 +266,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Habitat Use versus Availability by Juvenile Chinook Salmon in Winter Months, Lemhi River</h1>
 <h4 class="author">Kevin E. See<sup>1</sup>, Michael W. Ackerman<sup>2,✉</sup>, Nick Porter<sup>3,✉</sup>, Tulley Mackey<sup>4</sup>, Mike Hall<sup>3</sup>, and Richie Carmichael<sup>3</sup></h4>
-<h4 class="date">27 April, 2022</h4>
+<h4 class="date">28 April, 2022</h4>
 
 </div>
 
@@ -279,7 +279,7 @@ div.tocify {
 <div id="background" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Background</h1>
 <p>Degradation of tributary habitat has been implicated as a major factor contributing to declines of Pacific salmon <em>Oncorhynchus</em> spp. Tributary habitat rehabilitation actions are necessary towards stemming population declines. However, habitat use information for juvenile salmonids, particularly during winter months, is somewhat lacking.</p>
-<!-- The following was largely plagarized from Favrot et al. 2018. At some point, I worth be worth wordsmithing to make our own. -->
+<!-- The following was largely plagarized from Favrot et al. 2018. At some point, it would be worth wordsmithing to make our own. -->
 <p>Fish habitat is composed of physical and biological components that are necessary to complete a fish’s life history <span class="citation">(Newcomb et al. 2007)</span>. Habitat availability is the accessibility and procurability of those physical and biological resources by a fish <span class="citation">(Johnson 1980)</span>. Alternatively, habitat use is the way a fish uses the physical and biological resources available to them. Habitat suitability is a measure of the capacity of a specific available habitat to support a fish, with those habitats being most suitable being optimal <span class="citation">(Bovee 1986)</span>. Available habitats can be hierarchically characterized employing a spectrum ranging from least suitable (i.e., avoided) to most suitable (i.e., optimal). Habitat selection is the process of choosing a physical or biological component from a suite of available habitats <span class="citation">(Johnson 1980)</span>. In general, habitat use is considered random (i.e., no preference) if habitat use is proportionally equivalent to habitat availability. However, preferred habitat refers to a specific physical or biological component that is preferentially selected under equal availabilities (e.g., laboratory experiment: <span class="citation">Johnson (1980)</span>). Lastly, critical habitat areas exhibit characteristics important to sensitive life stages (e.g., early life history: <span class="citation">Pitlo (1989)</span>, <span class="citation">Newcomb et al. (2007)</span>).</p>
 <div id="objectives" class="section level2" number="1.1">
 <h2><span class="header-section-number">1.1</span> Objectives</h2>
